// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChatToolbar /> should render correctly when logged in 1`] = `
<aside
  className="chat-toolbar"
>
  <ul
    className="roster"
  >
    <li
      className="avatar"
    >
      <Connect(Avatar)
        user={
          Object {
            "id": 123,
            "name": "Joe",
          }
        }
      />
    </li>
    <li
      className="avatar"
    >
      <Connect(Avatar)
        user={
          Object {
            "id": 654,
            "name": "Josh",
          }
        }
      />
    </li>
    <li
      className="avatar"
    >
      <Connect(Avatar)
        user={
          Object {
            "id": 323,
            "name": "Liz",
          }
        }
      />
    </li>
  </ul>
</aside>
`;

exports[`<ChatToolbar /> should render correctly when not logged in 1`] = `
<aside
  className="chat-toolbar"
>
  <ul
    className="roster"
  >
    <li
      className="avatar"
    >
      <Connect(Avatar)
        user={
          Object {
            "id": 123,
            "name": "Joe",
          }
        }
      />
    </li>
    <li
      className="avatar"
    >
      <Connect(Avatar)
        user={
          Object {
            "id": 654,
            "name": "Josh",
          }
        }
      />
    </li>
  </ul>
</aside>
`;
